# Research

./: #build.sh#  .gitattributes  .gitignore  .travis.yml  .travis.yml~  README.md  REPO_STRUCTURE.md  build.sh  build.sh~  explanation.org  main.cc  token.txt
C12E2_work/Hamaker/: CMakeLists.txt  main.cpp
C12E2_work/Hamaker/Hamaker_20/: hamaker96.c  tab.rc20.0_gold_OA
C12E2_work/Hamaker/src/: NP_NP_1_5.cxx
Free_Energy/NEQFREE/: CMakeLists.txt  LICENSE  Makefile
Free_Energy/NEQFREE/include/: lib_mpi.hpp
Free_Energy/NEQFREE/src/: CMakeLists.txt
MPI_work/: #main.cxx#  .#main.cxx  .travis.yml  CMakeLists.txt  CMakeLists.txt~  ceiling.cxx~  eigenmain.cxx  eigenmain.cxx~  example.cxx  example.cxx~  main.cxx  main.cxx~  mpi_struct.cxx~  new  new.cxx  new.hpp  new.hpp~  particlebcast.cxx~  test.cxx  test.cxx~  trapezoid.cxx  trapezoid.cxx~  trapezoid.hpp  trapezoid.hpp~  vecTest.cxx~
MPI_work/MDEngine/: README.md
MPI_work/MDEngine/Thermostat_barostat/: mdlj_lan.c
MPI_work/MDEngine/include/: CMakeLists.txt  MD_friend_function.hpp  MD_gsl.hpp  MD_threading.hpp
MPI_work/MDEngine/src/: MD_algorithm.cxx
MPI_work/MPI/: .#MPI_broadcast.cxx  MPI_IO.cxx  MPI_broadcast.cxx
MPI_work/c++mpi/: #MPI_greetings.cxx#  .#MPI_greetings.cxx  A_main.cxx  MPI_1.cxx  MPI_1.cxx~  MPI_2.cxx  MPI_argument_list.cxx  MPI_divided_difference.cxx  MPI_energy.cxx  MPI_functions.hpp~  MPI_greetings.cxx  MPI_greetings.cxx~  MPI_mapreduce.cxx  MPI_reduce_1.cxx  energy  funcargs  hash.hpp  hash.hpp~  linked_list.cxx  mpi  mutex.cxx  new  quadtree.hpp  test.cxx  test.hpp  thread.cxx  units.h  vec.h  vec.h~
MPI_work/c++mpi/CODE/: Makefile  SCchapter10.cpp  SCchapter10.h  SCchapter2.cpp  SCchapter2.h  SCchapter2.h~  SCchapter3.cpp  SCchapter3.h  SCchapter4.cpp  SCchapter4.h  SCchapter5.cpp  SCchapter5.h  SCchapter6.cpp  SCchapter6.h  SCchapter7.cpp  SCchapter7.h  SCchapter8.cpp  SCchapter8.h  SCchapter9.cpp  SCchapter9.h  SCmathlib.cpp  SCmathlib.h  SCmathlib.h~  cguide.htm  code.htm
MPI_work/include/: #MPI_IO.hpp#  #MPI_broadcast.hpp#  MPI_IO.hpp  MPI_broadcast.hpp  MPI_broadcast.hpp~  MPI_errorhandle.hpp~  MPI_functions.hpp  MPI_ping_pong.hpp  MPI_ping_pong.hpp~  trapezoid.hpp~
MPI_work/matrix_CXX/: CMakeLists.txt
MPI_work/matrix_CXX/include/: InterpolatingFunction.hpp
MPI_work/matrix_CXX/src/: EmbeddedRKStepper.cpp  functor.cxx
MPI_work/ppmpi_c/chap03/: greetings.c
MPI_work/src/: .#MPI_broadcast.cxx  ACos.cpp  CMakeLists.txt  CMakeLists.txt~  InterpolatingFunction.cxx  MPI_IO.cxx  MPI_broadcast.cxx  MPI_broadcast.cxx~  MPI_ping_pong.cxx  MPI_reduce.cxx  Mat.cxx  trapezoid.cxx
MPI_work/tempcxx/: ceiling.cxx  main.cxx  trapezoid.cxx  vecTest.cxx
NEQFREE/: CMakeLists.txt  configure  main.cxx
NEQFREE/include/: JE_compute.hpp  MPI_IO.cxx  MPI_broadcast.cxx  MyClass.hpp
NEQFREE/src/: CMakeLists.txt  MPI_reduce.cxx  MyClass.cpp
NEQFREE/test/: Main.test.cxx
OPENMP_work/: .#main.cxx  CMakeLists.txt  main.cxx  openmp2.cxx  openmp2.cxx~  openmp2.hpp  openmp2.hpp~
OPENMP_work/GDB_test/: main.cc
OPENMP_work/GDB_test/pybind/: new.cxx
OPENMP_work/html/: pages.html
OPENMP_work/include/: #openmp1.h#  .#openmp1.h  openmp1.h  openmp1.hpp  openmp1.hpp~  openmp2.hpp  openmp2.hpp~  sym_dbg.hpp~  syn_dbg.hpp
OPENMP_work/latex/: refman.tex
OPENMP_work/src/: #README.txt#  #openmp1.cxx#  #openmp2.cxx#  .#README.txt  .#openmp1.cxx  .#openmp2.cxx  CMakeLists.txt  README.txt  new  omp_mul.c  openmp1.cxx  openmp1.cxx~  openmp1.h  openmp1.h~  openmp2.cxx  openmp3.cxx  test.cxx
Parallel/: #main.cxx#  .#README  .#main.cxx  .#notes.txt  .Rhistory  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  main.cxx  notes.txt  notes.txt~
Parallel/docker/: README  helloworld.cpp
Parallel/docs/: Doxygen
Parallel/docs/html/: Argument_8h_source.html  Core_8h_source.html  MPI__FuncTemp_8hpp_source.html  MPI__IO_8hpp_source.html  MPI__broadcast_8hpp_source.html  MPI__errorhandle_8hpp_source.html  MPI__functions_8hpp_source.html  MPI__pack_8hpp_source.html  MPI__ping__pong_8hpp_source.html  MPI__str_8hpp_source.html  Student__info_8h_source.html  Student__info_8hpp_source.html  annotated.html  classArithProgression-members.html  classArithProgression.html  classArithProgression__coll__graph.map  classArithProgression__coll__graph.md5  classArithProgression__inherit__graph.md5  classAudit-members.html  classAudit.html  classAudit__coll__graph.md5  classAudit__inherit__graph.md5  classComplex-members.html  classComplex.html  classCore-members.html  classCore.html  classCore__coll__graph.map  classCore__inherit__graph.map  classCore__inherit__graph.md5  classGenfun_1_1Argument-members.html  classGenfun_1_1Argument.html  classGrad-members.html  classGrad.html  classGrad__coll__graph.map  classGrad__coll__graph.md5  classGrad__inherit__graph.md5  classInitiateVectorMethod-members.html  classInitiateVectorMethod.html  classMPIInput-members.html  classMPIInput.html  (+117 more)
Parallel/docs/latex/: annotated.tex  classArithProgression.tex  classArithProgression__coll__graph.md5  classArithProgression__inherit__graph.md5  classAudit.tex  classAudit__coll__graph.md5  classAudit__inherit__graph.md5  classCore.tex  classCore__inherit__graph.md5  classGenfun_1_1Argument.tex  classGrad.tex  classGrad__coll__graph.md5  classGrad__inherit__graph.md5  classMPIInput.tex  classMPIInput__inherit__graph.md5  classMPI__BC.tex  classMPI__BC__Generic.tex  classMPI__BC__coll__graph.md5  classMPI__sorting__methods.tex  (+31 more)
Parallel/include/: #MPI_IO.hpp#  .#MPI_IO.hpp  Core.h  CubicSplineXtrapolatorWidget.h  MPI_IO.hpp  MPI_broadcast.hpp  MPI_nrmatrix.hpp~  black_scholes.hpp~  debug.hpp~  grade.h  openmp1.hpp  openmp2.hpp  openmp_LA.hpp  random.hpp  random.hpp~  statistics.h  statistics.h~
Parallel/src/: #MPI_IO.cxx#  #statistics.cxx#  .#MPI_IO.cxx  CMakeLists.txt  Core.cc  MPIVolumeUnionSpheres.cpp  MPI_IO.cxx  MPI_broadcast.cxx  MPI_group.cxx  MPI_struct.cxx  grade.cxx  openmp2.cxx  openmp_LA.cxx  openmp_pf.cxx  statistics.cxx
WIP/MPI_RDKIT_WORK/: CMakeLists.txt  CMakeLists.txt~  README  a.out  main.cxx  main.cxx~  new  tautomer_hash.cpp
(+1165 files in other folders)
